# linux-proc-plotter

./: main.py  pyproject.toml  renderer.py
datasource/: base_resource.py  mapping.py  memory.py  schema.py
